# compare-rags

./: .gitignore  README.md  README_long.md  pyproject.toml  requirements.txt  run_experiments.ipynb  setup.py
evaluation/: browse.ipynb  generate_eval_set.py  push_eval_set.py
experiments/lightrag/out-of-the-box/: config.yaml  eval.json  eval_analysis.json
experiments/lightrag/test/: config.yaml
experiments/llama_index/out-of-the-box/: analysis.json  config.yaml
experiments/llama_index/out-of-the-box-embeddings/: config.yaml
experiments/llama_index/out-of-the-box-neo4j/: config.yaml  eval_analysis.json
experiments/llama_index/test/: config.yaml
experiments/llama_index/v1/: config.yaml
lightrag/: build_graph.py  lightrag.py  rag.py
llama_index/: analysis.py  build_graph.py  evaluation.py  llama_index.py  rag.py
neo4j/: build_graph.py
outputs/llama_index/: huggingface_doc_qa_10_docs_eval.json
scripts/: build_graph.py  test_rag.py
scripts/evaluation/: 1_run_rag.py  2_evaluate.py  evaluate.py
scripts/evaluation_raget/: README.md
scripts/hf_doc_dataset/: generate_eval_set.py
src/: configuration.py  evaluation.py
src/evaluation/: huggingface_evaluator.py  openai_like_evaluator.py  prompts.py
src/lightrag/: rag.py
src/llama_index/: graph_builder.py  llama_index_rag.py  models.py
src/neo4j/: rag.py
